Fix some layout issues and brain farts

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a:hover, a:active, a:focus {color:#afc0cb;}
 .center {text-align:center;}
 @font-face {font-family:'Gill Sans'; src:url('fonts/GillSans.eot'); src:local('GillSansRegular'), local('GillSans'), url('fonts/GillSans.woff') format('woff'), url('fonts/GillSans.otf') format('opentype');}
 body {font-family:"Gill Sans", Trebuchet, Calibri, sans-serif; font-size:65.5%; line-height:18px; color:#4f4e4e;}
-section p, section pre, section address, section ul, section ol, section li, section dialog, section dl, section dt, section dd 
+section p, section pre, section address, section ul, section ol, section li, section dialog, section dl, section dt, section dd, blockquote
 {font-family:Times,"Times New Roman",Georgia,serif; font-size:14px; word-spacing:0.1em; hyphenate:auto; hyphenate-lines:3;}
 h1, h2, h3, h4, h5, h6 {color:#3f5767; text-transform:uppercase; letter-spacing:1px; padding-top:26px; padding-bottom:8px;}
 h1 {font-size:30px; line-height:36px;}
@@ -103,7 +103,7 @@ article li {background:transparent url(/images/site/bullet.png) no-repeat; paddi
 .posts li a {background:transparent url(/images/site/bullet.png) no-repeat; padding-left:20px; padding-top:2px;}
 .posts li a:hover {color:#3F5767;}
 .posts li.end {border-bottom:none;}
-figure, img.right {float:right; border:solid 1px #afc0cb; background:#fff; -webkit-box-shadow:-2px 2px 4px rgba(0, 0, 0, 0.2); padding:4px; margin:19px 0 12px 18px; width:243px; overflow:hidden;}
+figure, img.right {float:right; border:solid 1px #afc0cb; background:#fff; -webkit-box-shadow:-2px 2px 4px rgba(0, 0, 0, 0.2); padding:4px; margin:19px 0 12px 18px; overflow:hidden;}
 figure > img {float:none; border:none;-webkit-box-shadow:none; padding:0; margin:0;}
 figure p {padding:10px; margin:0; font-size:12px; line-height:16px;}
 img.left, figure.left {float:left; margin-left:0; margin-right:12px;}
